--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,54 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Calculator" Height="450" Width="450">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <!-- Number buttons -->
+        <Button x:Name="btn7" FontSize="30" Grid.Row="2" Grid.Column="0">7</Button>
+        <Button x:Name="btn8" FontSize="30" Grid.Row="2" Grid.Column="1">8</Button>
+        <Button x:Name="btn9" FontSize="30" Grid.Row="2" Grid.Column="2">9</Button>
+        <Button x:Name="btn4" FontSize="30" Grid.Row="3" Grid.Column="0">4</Button>
+        <Button x:Name="btn5" FontSize="30" Grid.Row="3" Grid.Column="1">5</Button>
+        <Button x:Name="btn6" FontSize="30" Grid.Row="3" Grid.Column="2">6</Button>
+        <Button x:Name="btn1" FontSize="30" Grid.Row="4" Grid.Column="0">1</Button>
+        <Button x:Name="btn2" FontSize="30" Grid.Row="4" Grid.Column="1">2</Button>
+        <Button x:Name="btn3" FontSize="30" Grid.Row="4" Grid.Column="2">3</Button>
+        <Button x:Name="btn0" FontSize="30" Grid.Row="5" Grid.Column="1">0</Button> 
+
+        <!-- Math Buttons -->
+        <Button x:Name="Plus" FontSize="30" Grid.Row="1" Grid.Column="3">+</Button>
+        <Button x:Name="Minus" FontSize="30" Grid.Row="2" Grid.Column="3">-</Button>
+        <Button x:Name="Multiply" FontSize="30" Grid.Row="3" Grid.Column="3">*</Button>
+        <Button x:Name="Divide" FontSize="30" Grid.Row="4" Grid.Column="3">/</Button>
+        <Button x:Name="Equals" FontSize="30" Grid.Row="5" Grid.Column="3">=</Button>
+
+        <!-- Clear Buttons -->
+        <Button x:Name="ClearEntry" FontSize="30" Grid.Row="1" Grid.Column="0">CE</Button>
+        <Button x:Name="Clear" FontSize="30" Grid.Row="1" Grid.Column="1">C</Button>
+        <Button x:Name="Backspace" FontSize="30" Grid.Row="1" Grid.Column="2" Content="&lt;="></Button>
+
+        <!-- Postive and Negative Button -->
+        <Button x:Name="btnPlusMinus" FontSize="30" Grid.Row="5" Grid.Column="0">+-</Button>
+
+        <!-- Display Text Box -->
+        <TextBox x:Name="TextDisplay" IsReadOnly="True" TextAlignment="Right" VerticalAlignment="Bottom" FontSize="30" BorderThickness="0" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">0</TextBox>
         
     </Grid>
+
 </Window>
